add dynamic update listing

--- a/_updates/2020-06.md
+++ b/_updates/2020-06.md
@@ -1,5 +1,5 @@
 ---
-  title: June 2020 (version 0.1)
+  # title: June 2020 (version 0.1)
   milestone: June+2020
   version: 0.1
   release: June 2020
@@ -9,4 +9,9 @@
 
 ### Editor Merge
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+When authors send the document off for editing, they typically do so in MS Word format. However, when they receive the document back, they need to split it back into the original files. This feature helps convert the document back into the many files.
+
+* When the source file is built, each original file is prepended with an H6.
+  * The LaTeX subparagraph is removed by macro.
+  * The HTML & ePUB H6 is `{display: none}`
+  * The MS Word Heading 6 is reduced to font-size 5 and color changes to grey to conceal it.
